[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/menubg.jpg" type="Texture" id=1]
[ext_resource path="res://sprites/gametitle.png" type="Texture" id=2]
[ext_resource path="res://sprites/ui/PlayButton.png" type="Texture" id=3]
[ext_resource path="res://sprites/ui/PlayButtonHighlight.png" type="Texture" id=4]
[ext_resource path="res://sprites/ui/QuitButton.png" type="Texture" id=5]
[ext_resource path="res://sprites/ui/QuitButtonHighlight.png" type="Texture" id=6]
[ext_resource path="res://MainMenu.gd" type="Script" id=7]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 162.65, 87.4241 )
scale = Vector2( 0.678092, 0.580143 )
texture = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 35.0
margin_right = 285.0
margin_bottom = 180.0
size_flags_horizontal = 4
custom_constants/separation = 16

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
margin_right = 250.0
margin_bottom = 100.0
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 250.0
margin_bottom = 176.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 250.0
margin_bottom = 60.0
custom_constants/separation = 5

[node name="PlayButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 80.0
margin_bottom = 60.0
texture_normal = ExtResource( 3 )
texture_focused = ExtResource( 4 )

[node name="QuitButton" type="TextureButton" parent="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 85.0
margin_right = 165.0
margin_bottom = 60.0
texture_normal = ExtResource( 5 )
texture_focused = ExtResource( 6 )
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
